--- a/src/Nethermind/Nethermind.Mining/Nethermind.Mining.csproj
+++ b/src/Nethermind/Nethermind.Mining/Nethermind.Mining.csproj
@@ -2,6 +2,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <IsPackable>false</IsPackable>
+    <LangVersion>7.2</LangVersion>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
