tets packages updates, fixed stack overflow in tests, fixed invalid header tests for ethash

--- a/src/Nethermind/Ethereum.Difficulty.Test/Ethereum.Difficulty.Test.csproj
+++ b/src/Nethermind/Ethereum.Difficulty.Test/Ethereum.Difficulty.Test.csproj
@@ -4,7 +4,7 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170628-02" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.0" />
     <PackageReference Include="NUnit" Version="3.9.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.9.0" />
   </ItemGroup>
@@ -21,7 +21,7 @@
       <Project>{5751C57B-9F2D-45DE-BCC2-42645B85E39E}</Project>
       <Name>Nethermind.Core</Name>
     </ProjectReference>
-<EmbeddedResource Include="..\..\tests\BasicTests\difficulty.json">
+    <EmbeddedResource Include="..\..\tests\BasicTests\difficulty.json">
       <Link>difficulty.json</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
