--- a/src/Nethermind/Nethermind.Mining/Nethermind.Mining.csproj
+++ b/src/Nethermind/Nethermind.Mining/Nethermind.Mining.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <LangVersion>7.2</LangVersion>
     <OutputType>Library</OutputType>
