--- a/src/Nethermind/Ethereum.Trie.Test/Ethereum.Trie.Test.csproj
+++ b/src/Nethermind/Ethereum.Trie.Test/Ethereum.Trie.Test.csproj
@@ -4,7 +4,7 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170628-02" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.0" />
     <PackageReference Include="NUnit" Version="3.9.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.9.0" />
   </ItemGroup>
@@ -17,7 +17,7 @@
       <Project>{8311E4F7-DB36-40F5-A496-7CE4FD486FEE}</Project>
       <Name>Nethermind.Store</Name>
     </ProjectReference>
-<EmbeddedResource Include="..\..\tests\TrieTests\hex_encoded_securetrie_test.json">
+    <EmbeddedResource Include="..\..\tests\TrieTests\hex_encoded_securetrie_test.json">
       <Link>hex_encoded_securetrie_test.json</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
