--- a/src/Nethermind/Nethermind.Blockchain.Test.Runner/Nethermind.Blockchain.Test.Runner.csproj
+++ b/src/Nethermind/Nethermind.Blockchain.Test.Runner/Nethermind.Blockchain.Test.Runner.csproj
@@ -22,7 +22,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Ethereum.Blockchain.Test\Ethereum.Blockchain.Test.csproj" />
+    <ProjectReference Include="..\Ethereum.Test.Base\Ethereum.Test.Base.csproj" />
     <ProjectReference Include="..\Nethermind.Evm\Nethermind.Evm.csproj" />
   </ItemGroup>
 </Project>
